dataset1235/2025-2/2868285114/users/3073449842/executions/3649835072_3691284457.log
== SUBMISSION (2025-08-25 21:05:58)
-- CODE: 
#notas
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(input(""))

#peso
peso1 = 1
peso2 = 2
peso3 = 3 
peso4 = 4

 #peso comtotal
pt = peso1+peso2+peso3+peso4

#notas com peso
nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

#media ponderada
media = (nt)/pt

#resultado
print(round(media,2))

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:45:07)
-- CODE: 
#notas
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(input(""))

#peso
peso1 = 1
peso2 = 2
peso3 = 3 
peso4 = 4

 #peso comtotal
pt = peso1+peso2+peso3+peso4

#notas com peso
nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

#media ponderada
media = (nt)/pt
#resultado
print((media,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
(7.936000000000002, 2)
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
(8.2, 2)
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
(7.0, 2)
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
(6.7, 2)
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
(30.0, 2)
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
(7.8, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 21:04:42)
-- CODE: 
#notas
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(input(""))

#peso
peso1 = 1
peso2 = 2
peso3 = 3 
peso4 = 4

 #peso comtotal
pt = peso1+peso2+peso3+peso4

#notas com peso
nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

#media ponderada
media = (nt)/pt

#resultado
print(float(media,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(float(media,2))
          ^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:42:41)
-- CODE: 
#notas
nota1 = float(input(""))
nota2 = float(input(""))
nota3 = float(input(""))
nota4 = float(input(""))

#peso
peso1 = 1
peso2 = 2
peso3 = 3 
peso4 = 4
 #peso com total
pt = peso1+peso2+peso3+peso4

#notas com peso
nt = nota1*peso1 + nota2*peso2 + nota3*peso3 + nota4*peso4

#media ponderada
media = (nt)/pt
#resultado
print(roud(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(roud(media,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
